terminando dark mode

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Rest Countries</title>
     <script src="./js/index.js"></script>
   </head>
-  <body>
+  <body class="bg-body--dark">
     <header class="header">
       <div class="header-container">
         <h1 class="header__title">Where in the world?</h1>
